Fix invisible usernames in notifications

--- a/we_clearblue/theme/common.css
+++ b/we_clearblue/theme/common.css
@@ -218,7 +218,7 @@ ul.linklist .icon-notification strong {
 	border-radius: 3px;
 }
 
-.username {
+.header-profile > a > .username {
 	color: #fff;
 }
 
